<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/textViewStyle"
            android:text="@string/question_01" />

        <EditText
            android:id="@+id/question_01_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:inputType="textCapWords" />

        <TextView
            style="@style/textViewStyle"
            android:text="@string/question_02" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/question_02_waston_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Waston" />

            <CheckBox
                android:id="@+id/question_02_alphago_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AlphaGo" />

            <CheckBox
                android:id="@+id/question_02_siri_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Siri" />

            <CheckBox
                android:id="@+id/question_02_now_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Google Now" />

        </LinearLayout>

        <TextView
            style="@style/textViewStyle"
            android:text="@string/question_03" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/question_03_coding_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Coding" />

            <CheckBox
                android:id="@+id/question_03_dating_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dating" />

            <CheckBox
                android:id="@+id/question_03_stopcoding_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stop Coding" />

            <CheckBox
                android:id="@+id/question_03_eating_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eating" />

        </LinearLayout>

        <TextView
            style="@style/textViewStyle"
            android:text="@string/question_04" />

        <RadioGroup
            android:id="@+id/question_04_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_04_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/question_04_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No" />
        </RadioGroup>

        <TextView
            style="@style/textViewStyle"
            android:text="@string/question_05" />

        <RadioGroup
            android:id="@+id/question_05_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_05_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/question_05_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="getAnswer"
                android:text="Submit" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>